RESOLVED FIXED235232
[JSC] Fix Linux 64bit compilation
https://bugs.webkit.org/show_bug.cgi?id=235232
Summary [JSC] Fix Linux 64bit compilation
Mikhail R. Gadelha
Reported 2022-01-14 07:40:10 PST
[JSC] Fix Linux 64bit compilation
Attachments
Patch (3.60 KB, patch)
2022-01-14 07:44 PST, Mikhail R. Gadelha
no flags
Patch (3.60 KB, patch)
2022-01-14 08:45 PST, Mikhail R. Gadelha
no flags
Patch (4.13 KB, patch)
2022-01-14 12:26 PST, Mikhail R. Gadelha
no flags
Patch (5.22 KB, patch)
2022-01-14 13:49 PST, Yusuke Suzuki
ews-feeder: commit-queue-
Patch (4.99 KB, patch)
2022-01-14 13:52 PST, Yusuke Suzuki
no flags
Patch (4.98 KB, patch)
2022-01-14 13:59 PST, Yusuke Suzuki
no flags
Patch (5.60 KB, patch)
2022-01-14 14:21 PST, Yusuke Suzuki
no flags
Patch (7.33 KB, patch)
2022-01-14 14:24 PST, Yusuke Suzuki
no flags
Mikhail R. Gadelha
Comment 1 2022-01-14 07:44:29 PST
Keith Miller
Comment 2 2022-01-14 08:39:22 PST
Comment on attachment 449172 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=449172&action=review > Source/WTF/wtf/PlatformUse.h:358 > +#if PLATFORM(MAC) I think this should be `OS(DARWIN)` since `PLATFORM(MAC)` is just macOS and not iOS/tvOS/watchOS, IIRC.
Mikhail R. Gadelha
Comment 3 2022-01-14 08:45:13 PST
Yusuke Suzuki
Comment 4 2022-01-14 09:47:14 PST
Comment on attachment 449176 [details] Patch This is not correct since PAS_USE_SPINLOCKS should be 1.
Mikhail R. Gadelha
Comment 5 2022-01-14 12:26:19 PST
Yusuke Suzuki
Comment 6 2022-01-14 12:42:03 PST
Comment on attachment 449204 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=449204&action=review > Source/bmalloc/ChangeLog:11 > + r287941 enabled jit-heap for all platforms and for some reason the > + preprocessor was not identifying PAS_USE_SPINLOCKS as defined. This > + patch adds a #if defined(PAS_USE_SPINLOCKS) guard which fixes the > + issue. We should investigate why it is. > Source/bmalloc/libpas/src/libpas/pas_config.h:100 > +#if defined(PAS_BMALLOC) > #define PAS_USE_SPINLOCKS 1 > #else > #define PAS_USE_SPINLOCKS 0 Regardless of the condition, PAS_USE_SPINLOCKS is defined. So the following change is incorrect. > Source/bmalloc/libpas/src/libpas/pas_lock.h:54 > +#if defined(PAS_USE_SPINLOCKS) This is not correct since PAS_USE_SPINLOCKS is always defined.
Yusuke Suzuki
Comment 7 2022-01-14 13:27:53 PST
I'll take it since it is mix of jitheap and https://trac.webkit.org/changeset/287968/webkit.
Yusuke Suzuki
Comment 8 2022-01-14 13:49:49 PST
Yusuke Suzuki
Comment 9 2022-01-14 13:52:28 PST
Yusuke Suzuki
Comment 10 2022-01-14 13:59:50 PST
Yusuke Suzuki
Comment 11 2022-01-14 14:21:42 PST
Yusuke Suzuki
Comment 12 2022-01-14 14:24:29 PST
Mark Lam
Comment 13 2022-01-14 14:47:46 PST
Comment on attachment 449224 [details] Patch r=me too if EWS is happy.
EWS
Comment 14 2022-01-14 19:15:47 PST
Committed r288050 (246070@main): <https://commits.webkit.org/246070@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449224 [details].
Radar WebKit Bug Importer
Comment 15 2022-01-14 19:16:18 PST
Note You need to log in before you can comment on or make changes to this bug.