[JSC] Fix Linux 64bit compilation https://bugs.webkit.org/show_bug.cgi?id=235232

Reviewed by Saam Barati.

.:

* Source/cmake/OptionsCommon.cmake:

Source/bmalloc:

Add new pas_lenient_compact_ptr related files to CMakeLists.txt too.

* CMakeLists.txt:
* bmalloc/BPlatform.h:
* bmalloc/Gigacage.cpp:
* bmalloc/IsoHeap.cpp:
* bmalloc/IsoHeap.h:
* bmalloc/bmalloc.h:

Source/JavaScriptCore:

Define PAS_BMALLOC in all projects since JavaScriptCore includes some files which can require this macro variable.
Previously, JSDollarVM.cpp includes these files first, then at that time, we can define PAS_BMALLOC.
However, after enabling jit-heap, these files are included before JSDollarVM.cpp and include pas_config.h without
PAS_BMALLOC definition, which later causes the problem when including pas_lock.h since non PAS_BMALLOC libpas requires
darwin specific locking.

Since defining PAS_BMALLOC does not matter to whether using libpas or not, this patch just defines it globally.
And for Apple ports, we define this when we define BENABLE_LIBPAS.

* tools/JSDollarVM.cpp:



Canonical link: https://commits.webkit.org/246070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288050 268f45cc-cd09-0410-ab3c-d52691b4dbfc