Source/bmalloc/bmalloc/IsoHeap.h
@@ -29,9 +29,6 @@
 #include "Mutex.h"
 
 #if BUSE(LIBPAS)
-#ifndef PAS_BMALLOC
-#define PAS_BMALLOC 1
-#endif
 #include "bmalloc_heap_ref.h"
 #endif
 
